Using the naught package to provide zero downtime deployment, and to demonize the server

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "dependencies": {
                 "express": "*",
                 "sockjs": "*",
-                "colors": "*"
+                "colors": "*",
+                "naught": "*"
         }
 }
