--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
                 "express": "*",
                 "sockjs": "*",
                 "colors": "*",
-                "naught": "*"
+                "naught": "*",
+                "redis": "*"
         }
 }
